# observe2701

./: .dockerignore  .gitignore  .gitlab-ci.yaml  README.md  fmt.sh  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tox.yml
src/observe2701/: main.py
tests/: __init__.py  main_test.py
