[tool.poetry]
name = "empty-python"
version = "0.1.0"
description = ""
authors = ["Nicola Timoncini <tntimo@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
packages = [
    { include = "empty", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11,<3.12"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.381"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-timeout = "^2.3.1"
ruff = "^0.6.7"
time-machine = "^2.15.0"
tox = "^4.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
timeout = 30

[tool.ruff]
line-length = 100
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    # isort
    "I"
]
extend-exclude = [
]

[tool.pyright]
include = ["src"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
ignore = []
defineConstant = {}
stubPath = "src/stubs"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" },
  { root = "tests", extraPaths = ["src"] },
]
